--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,6 +5,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.text-grey {
+    color: #727272;
+}
+
 .btn-primary {
     color: #FFF;
     text-align: center;
@@ -70,41 +74,15 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
-
 .banner img {
     margin-top: 20px;
     width: 100%;
 }
 
-/* responsive media queries */
-@media screen and (max-width:576px) {
-    header {
-        padding: 20px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
-
-@media screen and (min-width:576px) and (max-width:960px) {
-    header {
-        padding: 20px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-
-}
-
 /* main styles */
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 /* teams styles */
@@ -141,4 +119,37 @@ main {
 .teams-title .text-features {
     color: #FF900E;
     font-weight: 700;
+}
+
+/* responsive media queries */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container {
+        flex-direction: column;
+    }
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+
+    .teams-content {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container {
+        flex-direction: column;
+    }
+
 }
